--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
           output_location: ".next" # Built app content directory - optional
           ###### End of Repository/Build Configurations ######
         env:
+          JSS_EDITING_SECRET: "aSecret123!!"
           PUBLIC_URL: "https://red-mushroom-0d49c7e03.2.azurestaticapps.net"
           FETCH_WITH: "GraphQL"
           JSS_APP_NAME: "helloworld"
